--- a/about.html
+++ b/about.html
@@ -1,6 +1,2 @@
 <h1>Olá, este arquivo é do git hub.</h1>
-<p>Testando Carai</p>
-<p>testando github</p>
-<h3>Enviando Putas.</h3>
-<h5>dsafafadfasdfa</h5>
-<h6>dfsadfasfsaf</h6>
+<h2>Putaria na esquina.</h2>
